# web

./: forms.py  main.py  pyproject.toml
final_rest_api_application_for_yandex_liceum_web_module_task/: jobs_api.py  main.py  query1.py  query2.py  test_user.py  tests.py  user_parser.py  users_resourse.py
final_rest_api_application_for_yandex_liceum_web_module_task/data/: jobs.py  users.py
final_rest_api_application_for_yandex_liceum_web_module_task/db/: mass_explorer.db
final_rest_api_application_for_yandex_liceum_web_module_task/solution/: main.py  query1.py
final_rest_api_application_for_yandex_liceum_web_module_task/templates/: index.html
lesson1/: main.py
lesson1/static/css/: style.css
lesson1/templates/: login.html  train.html
lesson2/: app.py  main.py
lesson2/data/: jobs.py  users.py
lesson2/templates/: base.html  index.html
lesson3/: app.py
lesson3/data/: db_session.py
lesson3/forms/: jobs.py
lesson3/templates/: add_job.html
restapi2/: app.py  test_users.py  users_api.py
restapi2/data/: news.py  users.py
restapi2/templates/: base.html  index.html
templates/: base.html  index.html  list_profs.html
